# Polycopy

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/migrations/: env.py
backend/migrations/versions/: 25239ccd3168_initial_schema.py  a1b2c3d4e5f6_add_market_slug.py  b2c3d4e5f6a7_add_paper_account.py  c3d4e5f6a7b8_add_sizing_mode.py  d4e5f6a7b8c9_add_standing_risk_caps.py  e5f6a7b8c9d0_add_account_snapshots.py
backend/src/polycopy/: run_cli.py  setup_cli.py
backend/src/polycopy/api/: __main__.py  app.py  deps.py  routes.py  schemas.py
backend/src/polycopy/bot/: __main__.py  app.py  session.py
backend/src/polycopy/bot/handlers/: auto.py  follow.py  link.py  login.py  notify.py  paper.py  (+4 more)
backend/src/polycopy/core/: config.py  crypto.py  db.py  logging.py  models.py  notify.py  portfolio.py  repo.py  security.py  wallet.py
backend/src/polycopy/polymarket/: clob.py  data_api.py  discovery.py  stats.py  urls.py
backend/src/polycopy/workers/: __main__.py  mirror.py  reconcile.py  risk.py  scheduler.py  scout.py  snapshot.py  watcher.py
backend/tests/: conftest.py  test_api.py  test_approve.py  test_bot_link.py  test_clob.py  test_config_security.py  test_data_api.py  test_discovery.py  test_mirror.py  test_notify.py  test_paper.py  test_paper_close.py  test_pnl_series.py  test_realized_stats.py  test_reconcile.py  test_repo.py  test_risk.py  test_run_cli.py  test_security.py  test_setup_cli.py  test_smoke.py  test_stats.py  test_wallet.py  test_watcher.py
(+14 files in other folders)
