[project]
name = "polycopy"
version = "0.1.0"
description = "Polymarket copy-trading Telegram bot + dashboard backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.5",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite>=0.20",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "httpx>=0.27",
    "python-telegram-bot>=21.6",
    "apscheduler>=3.10",
    "cryptography>=43.0",
    "py-clob-client>=0.17",
    "structlog>=24.4",
    "tenacity>=9.0",
    "itsdangerous>=2.2",
    "eth-account>=0.13",
    "web3>=6.20",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "pytest-httpx>=0.32",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
polycopy-setup = "polycopy.setup_cli:main"
polycopy-api = "polycopy.api.__main__:main"
polycopy-bot = "polycopy.bot.__main__:main"
polycopy-worker = "polycopy.workers.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "N", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
